# Seoul-City-Problem-Analysis

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: methodology.md
src/: 3_matrix.py  4_priority.py  5_viz.py  config.py
src/0_preprocess/: b013.py  b013_combine.py  b040.py  b079.py  cctv_void.py  crime_context.py  light_geocode.py  light_void.py  opening_rate.py  police_void.py
src/1_filter/: commerce.py  residential.py
src/2_index/: evening_sales.py  gap_index.py  growth_index.py  infra_gap.py  master_table.py  opening_index.py  potential.py  transit_index.py
src/auxiliary/: kmeans_clustering.py
src/validation/: evening_vs_late_test.py
