[project]
name = "seoul-data-driven-solutions"
version = "0.1.0"
description = "A data-driven project analyzing Seoul’s urban challenges using public datasets, with statistical validation and actionable insights."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.13.0",
    "jupyterlab>=4.2.0",
    "ipykernel>=6.29.0",
    "requests>=2.33.1",
    "geopandas>=1.1.3",
    "folium>=0.20.0",
    "mapclassify>=2.10.0",
    "keplergl>=0.3.7",
]

[tool.uv]
package = false
